@@ -12,7 +12,12 @@ namespace Opus.Core
         {
             this.Platform = EPlatform.All;
             this.Configuration = EConfiguration.All;
+            // NEW STYLE
+#if true
+            this.ToolsetTypes = null;
+#else
             this.Toolchains = new string[] { ".*" };
+#endif
         }
 
         public EPlatform Platform
@@ -27,19 +32,37 @@ namespace Opus.Core
             set;
         }
 
+        // NEW STYLE
+#if true
+        public System.Type[] ToolsetTypes
+        {
+            get;
+            set;
+        }
+#else
         public string[] Toolchains
         {
             get;
             set;
         }
+#endif
 
         public override string ToString()
         {
+            // NEW STYLE
+#if true
+            string message = System.String.Format("Platform='{0}' Configuration='{1}' ToolsetTypes='", this.Platform.ToString(), this.Configuration.ToString());
+            foreach (System.Type type in this.ToolsetTypes)
+            {
+                message += type.ToString() + " ";
+            }
+#else
             string message = System.String.Format("Platform='{0}' Configuration='{1}' Toolchains='", this.Platform.ToString(), this.Configuration.ToString());
             foreach (string toolchain in this.Toolchains)
             {
                 message += toolchain + " ";
             }
+#endif
             message.TrimEnd();
             message += "'";
             return message;
